--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ android:
     - build-tools-25.0.2
     - android-25
     - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-25
+
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
