Problem: still failing; Solution: pls stop

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - build-tools-25.0.2
     - android-25
     - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-22
 
 # Emulator Management: Create, Start and Wait
 before_script:
