--- a/circle.yaml
+++ b/circle.yaml
@@ -5,7 +5,8 @@ machine:
 
 dependencies:
   pre:
-    - echo y | android update sdk --no-ui --all --filter "build-tools-25.0.3"
+    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,android-25
+    - echo y | android update sdk --no-ui --all --filter build-tools-25.0.3
 
 test:
   override:
