--- a/circle.yaml
+++ b/circle.yaml
@@ -7,6 +7,8 @@ dependencies:
   pre:
     - echo y | android update sdk --no-ui --all --filter tools,extra-android-m2repository,android-25
     - echo y | android update sdk --no-ui --all --filter build-tools-25.0.3
+  override:
+    - ./gradlew dependencies
 
 test:
   override:
