--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ android:
     - tools
     - platform-tools
     - build-tools-25.0.3
+    - android-22
     - android-25
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-22
