--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,17 @@ buildscript {
 
   ext {
     versions = [
-        android       : "2.3.1",
-        kotlin        : "1.1.2-4",
-        gradleVersions: "0.14.0",
-        supportTest   : "0.5",
-        anko          : "0.10.0",
+        android       : "3.0+",
+        kotlin        : "1.1.51",
+        gradleVersions: "0.17.0",
+        supportTest   : "1.0.1",
+        anko          : "0.10.2",
     ]
   }
 
   repositories {
     jcenter()
+    google()
   }
 
   dependencies {
@@ -27,12 +28,11 @@ apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.3"
+  compileSdkVersion 26
 
   defaultConfig {
     minSdkVersion 12
-    targetSdkVersion 25
+    targetSdkVersion 26
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
@@ -44,12 +44,13 @@ android {
 
 repositories {
   jcenter()
+  google()
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
-  androidTestCompile "com.android.support.test:runner:$versions.supportTest"
-  androidTestCompile "io.kotlintest:kotlintest:2.0.2"
-  androidTestCompile "org.jetbrains.anko:anko-commons:$versions.anko"
+  androidTestImplementation "com.android.support.test:runner:$versions.supportTest"
+  androidTestImplementation "io.kotlintest:kotlintest:2.0.7"
+  androidTestImplementation "org.jetbrains.anko:anko-commons:$versions.anko"
 }
