--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ android:
     - build-tools-26.0.2
     - android-26
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-26
+    - sys-img-x86-android-26
 
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi x86
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
