--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,24 @@ branches:
   only:
     - master
 
+env:
+  global:
+    - ANDROID_API_LEVEL=26
+    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
+    - ANDROID_ABI=google_apis/armeabi-v7a
+
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-26.0.2
-    - android-26
-    - extra-android-m2repository
-    - sys-img-x86-android-26
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-26 --abi x86
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
