--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   global:
     - ANDROID_API_LEVEL=26
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
-    - ANDROID_ABI=google_apis/armeabi-v7a
+    - ANDROID_ABI=x86
 
 android:
   components:
@@ -19,7 +19,7 @@ android:
     # Note that the tools section appears twice on purpose as it’s required to get the newest Android SDK tools.
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 
 # Emulator Management: Create, Start and Wait
 before_script:
