--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,8 @@ machine:
 
 dependencies:
   pre:
-    - echo y | android update sdk --no-ui --all --filter tools,extra-android-m2repository,android-25
-    - echo y | android update sdk --no-ui --all --filter build-tools-25.0.3
+    - echo y | android update sdk --no-ui --all --filter tools,android-26
+    - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2
 
 test:
   override:
