--- a/circle.yml
+++ b/circle.yml
@@ -2,10 +2,10 @@
 machine:
   environment:
     QEMU_AUDIO_DRV: none
+    TERM: dumb
 
 dependencies:
   pre:
-    - export TERM="dumb"
     - echo y | android update sdk --no-ui --all --filter tools,android-26,build-tools-26.0.2
 
 test:
