--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ buildscript {
 
   ext {
     versions = [
-        android       : "3.1.+",
-        kotlin        : "1.2.41",
+        android       : "3.0+",
+        kotlin        : "1.1.51",
         gradleVersions: "0.17.0",
-        supportTest   : "1.0.2",
-        anko          : "0.10.5",
+        supportTest   : "1.0.1",
+        anko          : "0.10.2",
     ]
   }
 
@@ -52,7 +52,7 @@ configurations {
 }
 
 dependencies {
-  ktlint "com.github.shyiko:ktlint:0.23.1"
+  ktlint "com.github.shyiko:ktlint:0.22.0"
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
